--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -10,4 +10,8 @@
     height: 30px;
     border-radius: 0 0 0 10px;
     font-size: 18px;
+    background-color: #ef1c8f;
+}
+.logoLink{
+    width: 50px;
 }
