faltou css no vtex.menu.css

--- a/styles/css/vtex.menu.css
+++ b/styles/css/vtex.menu.css
@@ -5,3 +5,9 @@
     text-align: center;
     display: block;
 }
+.styledLinkContent--menu-categoria-icone{
+    display: block !important;
+}
+.styledLinkIcon--menu-categoria-icone .activeClassName{
+    display: block;
+}
