--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -1,8 +1,11 @@
-.paragraph--notificacaoBarTexto{
-    color:#A1A1A1;
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+.paragraph--notificacaoBarTexto {
+    color: #A1A1A1;
     vertical-align: middle;
     transition: all .2s ease;
+    font-family: 'Oswald';
 }
-.container--textLogo{
+
+.container--textLogo {
     margin-left: 30px;
 }
