--- a/styles/css/vtex.store-header.css
+++ b/styles/css/vtex.store-header.css
@@ -1,5 +1,6 @@
-.headerRowBackground--notificacaoBar{
+.headerRowBackground--notificacaoBarfull{
     background-color: #F5F5F5;
-    font-size: 20px;
-    color: orange;
+    font-size: 16px;
+    vertical-align: middle;
+    height: 3.5rem;
 }
