--- a/styles/css/vtex.store-header.css
+++ b/styles/css/vtex.store-header.css
@@ -1,6 +1,6 @@
 .headerRowBackground--notificacaoBarfull{
     background-color: #F5F5F5;
-    font-size: 16px;
+    font-size: 1.2rem;
     vertical-align: middle;
     height: 3.5rem;
 }
