--- a/styles/css/vtex.menu.css
+++ b/styles/css/vtex.menu.css
@@ -9,18 +9,20 @@
     font-size: 12px;
 }
 
-.menuItem--menu-categoria-icone {
+.menuItem--menu-categoria-icone{
     display: block;
     width: 5.26316%;
 }
-
+.menuItem--menu-categoria-icone-footer{
+    display: block;
+}
 .menuItem--menu-categoria-icone:hover {
     border-top:2px solid #ef1c8f;
     
     padding-top: -2px;
 }
 
-.styledLinkIcon--menu-categoria-icone {
+.styledLinkIcon--menu-categoria-icone, .styledLinkIcon--menu-categoria-icone-footer {
     text-align: center;
     display: block;
 }
@@ -29,7 +31,8 @@
     color: green !important;
 }
 
-.styledLinkContent--menu-categoria-icone {
+.styledLinkContent--menu-categoria-icone,
+.styledLinkContent--menu-categoria-icone-footer {
     display: block !important;
     font-size: 12px;
     color: #ef1c8f;
@@ -41,4 +44,7 @@
 
 .styledLinkIcon--menu-categoria-icone .activeClassName {
     display: block;
+}
+.footer-mobile .list {
+    justify-content: space-between;
 }
